# git-lab

./: .env.development  .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
services/diffstream/: README.md  pyproject.toml
services/diffstream/fixtures/: diagnostics.json  empty_same.json
services/diffstream/src/diffstream/: __init__.py  algorithm.py  codec.py  connection.py  errors.py  model.py
services/diffstream/tests/: test_algorithm.py  test_boundaries.py  test_codec.py  test_connection.py
services/filedelta/: README.md  pyproject.toml
services/filedelta/fixtures/: README.md
services/filedelta/fixtures/window_cases/crlf/: events.jsonl
services/filedelta/fixtures/window_cases/file-truncated/: events.jsonl
services/filedelta/fixtures/window_cases/grow/: events.jsonl
services/filedelta/fixtures/window_cases/lines-changed/: events.jsonl
services/filedelta/fixtures/window_cases/lines-inserted/: events.jsonl
services/filedelta/fixtures/window_cases/lines-removed/: events.jsonl
services/filedelta/fixtures/window_cases/metadata-only/: events.jsonl
services/filedelta/fixtures/window_cases/reset/: events.jsonl
services/filedelta/fixtures/window_cases/shrink/: events.jsonl
services/filedelta/fixtures/window_cases/start/: events.jsonl
services/filedelta/fixtures/window_cases/utf8-multibyte/: events.jsonl  expected-window.txt
services/filedelta/src/filedelta/: __init__.py  connection.py  constants.py  errors.py  hash.py  json_codec.py  line_index.py  model.py  ops.py  snapshot.py  subscriber.py  window.py
services/filedelta/src/filedelta/testing/: __init__.py  gen_fixtures.py
services/filedelta/tests/: test_connection.py  test_json_codec.py  test_line_index.py  test_ops.py  test_snapshot.py  test_window_delta.py
services/griplab_service/: pyproject.toml
services/griplab_service/src/griplab_service/: __init__.py  chat_store.py  cli.py  collaborators.py  config.py  hub_registration.py  perf.py  probe.py  restart.py  ssh_bootstrap.py
services/griplab_service/src/griplab_service/hub/: __init__.py  app.py
services/griplab_service/src/griplab_service/local_client/: __init__.py  app.py  deps.py  tree.py  workspace.py
services/griplab_service/src/griplab_service/protocol/: __init__.py  envelope.py
services/griplab_service/src/griplab_service/vm_manger/: GLVMDesign.md  GLVMDesignPlan.md  GripLabHowTo.md  __init__.py  griplab_vm.py  vm_manager.py
services/griplab_service/tests/: conftest.py  test_collaborators.py  test_hub.py  test_hub_registration.py  test_local_client.py  test_peer_probe_ssh.py  test_perf.py  test_protocol_envelope.py  test_ssh_env.py  test_workspace_scan.py
services/griplab_service/tests/fixtures/: __init__.py  repo_env.py  ssh_env.py
services/griplab_service/tests/vm_manage/: test_config_state.py  test_griplab_vm_cli.py
(+101 files in other folders)
