[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "diffstream"
version = "0.1.0"
description = "Structured diff stream protocol primitives for grip-lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diffstream = ["py.typed"]
