[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "filedelta"
version = "0.1.0"
description = "Structured byte delta protocol primitives for grip-lab file windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
filedelta = ["py.typed"]
