[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "griplab-service"
version = "0.1.0"
description = "Local service protocol and runtime for grip-lab"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
griplab = "griplab_service.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
griplab_service = ["py.typed"]
